
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int dwWin32ExitCode; int dwCurrentState; } ;


 scalar_t__ InitService () ;
 int SERVICE_RUNNING ;
 int SERVICE_STOPPED ;
 TYPE_1__ ServiceStatus ;
 int SetServiceStatus (int ,TYPE_1__*) ;
 int hStatus ;

void ServiceMain(int argc, char** argv) {
    if (InitService()) {
       ServiceStatus.dwCurrentState = SERVICE_STOPPED;
       ServiceStatus.dwWin32ExitCode = -1;
       SetServiceStatus(hStatus, &ServiceStatus);
       return;
    }
   ServiceStatus.dwCurrentState = SERVICE_RUNNING;
   SetServiceStatus (hStatus, &ServiceStatus);
}
