; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_16940.c_ServiceMain.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_16940.c_ServiceMain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SERVICE_STOPPED = common dso_local global i32 0, align 4
@ServiceStatus = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@hStatus = common dso_local global i32 0, align 4
@SERVICE_RUNNING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ServiceMain(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = call i64 (...) @InitService()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* @SERVICE_STOPPED, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 4
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 0), align 4
  %9 = load i32, i32* @hStatus, align 4
  %10 = call i32 @SetServiceStatus(i32 %9, %struct.TYPE_3__* @ServiceStatus)
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @SERVICE_RUNNING, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 4
  %13 = load i32, i32* @hStatus, align 4
  %14 = call i32 @SetServiceStatus(i32 %13, %struct.TYPE_3__* @ServiceStatus)
  br label %15

15:                                               ; preds = %11, %7
  ret void
}

declare dso_local i64 @InitService(...) #1

declare dso_local i32 @SetServiceStatus(i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
